Bug 1015430 - Fix more XPCOM constructors to clarify whether they should be explicit; r=froydnj