xpcom/glue/nsCOMPtr.h
@@ -145,6 +145,12 @@ struct already_AddRefed
       // nothing else to do here
     }
 
+#ifdef MOZ_HAVE_CXX11_NULLPTR
+    // We have to keep this constructor implicit if we don't have nullptr support
+    // so that returning nullptr from a function which returns an already_AddRefed
+    // type works on the older b2g toolchains.
+    explicit
+#endif
     already_AddRefed( T* aRawPtr )
       : mRawPtr(aRawPtr)
     {
@@ -435,7 +441,7 @@ nsCOMPtr_base
   {
     public:
 
-      nsCOMPtr_base( nsISupports* rawPtr = 0 )
+      explicit nsCOMPtr_base( nsISupports* rawPtr = 0 )
           : mRawPtr(rawPtr)
         {
           // nothing else to do here
@@ -568,7 +574,7 @@ class nsCOMPtr MOZ_FINAL
           NSCAP_LOG_ASSIGNMENT(this, aSmartPtr.mRawPtr);
         }
 
-      nsCOMPtr( T* aRawPtr )
+      MOZ_IMPLICIT nsCOMPtr( T* aRawPtr )
             : NSCAP_CTOR_BASE(aRawPtr)
           // construct from a raw pointer (of the right type)
         {
@@ -578,7 +584,7 @@ class nsCOMPtr MOZ_FINAL
           NSCAP_ASSERT_NO_QUERY_NEEDED();
         }
 
-      nsCOMPtr( already_AddRefed<T>& aSmartPtr )
+      MOZ_IMPLICIT nsCOMPtr( already_AddRefed<T>& aSmartPtr )
             : NSCAP_CTOR_BASE(aSmartPtr.take())
           // construct from |already_AddRefed|
         {
@@ -586,7 +592,7 @@ class nsCOMPtr MOZ_FINAL
           NSCAP_ASSERT_NO_QUERY_NEEDED();
         }
 
-      nsCOMPtr( already_AddRefed<T>&& aSmartPtr )
+      MOZ_IMPLICIT nsCOMPtr( already_AddRefed<T>&& aSmartPtr )
             : NSCAP_CTOR_BASE(aSmartPtr.take())
           // construct from |otherComPtr.forget()|
         {
@@ -595,7 +601,7 @@ class nsCOMPtr MOZ_FINAL
         }
 
       template<typename U>
-      nsCOMPtr( already_AddRefed<U>& aSmartPtr )
+      MOZ_IMPLICIT nsCOMPtr( already_AddRefed<U>& aSmartPtr )
             : NSCAP_CTOR_BASE(static_cast<T*>(aSmartPtr.take()))
           // construct from |already_AddRefed|
         {
@@ -607,7 +613,7 @@ class nsCOMPtr MOZ_FINAL
         }
 
       template<typename U>
-      nsCOMPtr( already_AddRefed<U>&& aSmartPtr )
+      MOZ_IMPLICIT nsCOMPtr( already_AddRefed<U>&& aSmartPtr )
             : NSCAP_CTOR_BASE(static_cast<T*>(aSmartPtr.take()))
           // construct from |otherComPtr.forget()|
         {
@@ -618,7 +624,7 @@ class nsCOMPtr MOZ_FINAL
           NSCAP_ASSERT_NO_QUERY_NEEDED();
         }
 
-      nsCOMPtr( const nsQueryInterface qi )
+      MOZ_IMPLICIT nsCOMPtr( const nsQueryInterface qi )
             : NSCAP_CTOR_BASE(0)
           // construct from |do_QueryInterface(expr)|
         {
@@ -626,7 +632,7 @@ class nsCOMPtr MOZ_FINAL
           assign_from_qi(qi, NS_GET_TEMPLATE_IID(T));
         }
 
-      nsCOMPtr( const nsQueryInterfaceWithError& qi )
+      MOZ_IMPLICIT nsCOMPtr( const nsQueryInterfaceWithError& qi )
             : NSCAP_CTOR_BASE(0)
           // construct from |do_QueryInterface(expr, &rv)|
         {
@@ -634,7 +640,7 @@ class nsCOMPtr MOZ_FINAL
           assign_from_qi_with_error(qi, NS_GET_TEMPLATE_IID(T));
         }
 
-      nsCOMPtr( const nsGetServiceByCID gs )
+      MOZ_IMPLICIT nsCOMPtr( const nsGetServiceByCID gs )
             : NSCAP_CTOR_BASE(0)
           // construct from |do_GetService(cid_expr)|
         {
@@ -642,7 +648,7 @@ class nsCOMPtr MOZ_FINAL
           assign_from_gs_cid(gs, NS_GET_TEMPLATE_IID(T));
         }
 
-      nsCOMPtr( const nsGetServiceByCIDWithError& gs )
+      MOZ_IMPLICIT nsCOMPtr( const nsGetServiceByCIDWithError& gs )
             : NSCAP_CTOR_BASE(0)
           // construct from |do_GetService(cid_expr, &rv)|
         {
@@ -650,7 +656,7 @@ class nsCOMPtr MOZ_FINAL
           assign_from_gs_cid_with_error(gs, NS_GET_TEMPLATE_IID(T));
         }
 
-      nsCOMPtr( const nsGetServiceByContractID gs )
+      MOZ_IMPLICIT nsCOMPtr( const nsGetServiceByContractID gs )
             : NSCAP_CTOR_BASE(0)
           // construct from |do_GetService(contractid_expr)|
         {
@@ -658,7 +664,7 @@ class nsCOMPtr MOZ_FINAL
           assign_from_gs_contractid(gs, NS_GET_TEMPLATE_IID(T));
         }
 
-      nsCOMPtr( const nsGetServiceByContractIDWithError& gs )
+      MOZ_IMPLICIT nsCOMPtr( const nsGetServiceByContractIDWithError& gs )
             : NSCAP_CTOR_BASE(0)
           // construct from |do_GetService(contractid_expr, &rv)|
         {
@@ -666,7 +672,7 @@ class nsCOMPtr MOZ_FINAL
           assign_from_gs_contractid_with_error(gs, NS_GET_TEMPLATE_IID(T));
         }
 
-      nsCOMPtr( const nsCOMPtr_helper& helper )
+      MOZ_IMPLICIT nsCOMPtr( const nsCOMPtr_helper& helper )
             : NSCAP_CTOR_BASE(0)
           // ...and finally, anything else we might need to construct from
           //  can exploit the |nsCOMPtr_helper| facility
@@ -943,7 +949,7 @@ class nsCOMPtr<nsISupports>
           NSCAP_LOG_ASSIGNMENT(this, aSmartPtr.mRawPtr);
         }
 
-      nsCOMPtr( nsISupports* aRawPtr )
+      MOZ_IMPLICIT nsCOMPtr( nsISupports* aRawPtr )
             : nsCOMPtr_base(aRawPtr)
           // construct from a raw pointer (of the right type)
         {
@@ -952,21 +958,21 @@ class nsCOMPtr<nsISupports>
           NSCAP_LOG_ASSIGNMENT(this, aRawPtr);
         }
 
-      nsCOMPtr( already_AddRefed<nsISupports>& aSmartPtr )
+      MOZ_IMPLICIT nsCOMPtr( already_AddRefed<nsISupports>& aSmartPtr )
             : nsCOMPtr_base(aSmartPtr.take())
           // construct from |already_AddRefed|
         {
           NSCAP_LOG_ASSIGNMENT(this, mRawPtr);
         }
 
-      nsCOMPtr( already_AddRefed<nsISupports>&& aSmartPtr )
+      MOZ_IMPLICIT nsCOMPtr( already_AddRefed<nsISupports>&& aSmartPtr )
             : nsCOMPtr_base(aSmartPtr.take())
           // construct from |otherComPtr.forget()|
         {
           NSCAP_LOG_ASSIGNMENT(this, mRawPtr);
         }
 
-      nsCOMPtr( const nsQueryInterface qi )
+      MOZ_IMPLICIT nsCOMPtr( const nsQueryInterface qi )
             : nsCOMPtr_base(0)
           // assign from |do_QueryInterface(expr)|
         {
@@ -974,7 +980,7 @@ class nsCOMPtr<nsISupports>
           assign_from_qi(qi, NS_GET_IID(nsISupports));
         }
 
-      nsCOMPtr( const nsQueryInterfaceWithError& qi )
+      MOZ_IMPLICIT nsCOMPtr( const nsQueryInterfaceWithError& qi )
             : nsCOMPtr_base(0)
           // assign from |do_QueryInterface(expr, &rv)|
         {
@@ -982,7 +988,7 @@ class nsCOMPtr<nsISupports>
           assign_from_qi_with_error(qi, NS_GET_IID(nsISupports));
         }
 
-      nsCOMPtr( const nsGetServiceByCID gs )
+      MOZ_IMPLICIT nsCOMPtr( const nsGetServiceByCID gs )
             : nsCOMPtr_base(0)
           // assign from |do_GetService(cid_expr)|
         {
@@ -990,7 +996,7 @@ class nsCOMPtr<nsISupports>
           assign_from_gs_cid(gs, NS_GET_IID(nsISupports));
         }
 
-      nsCOMPtr( const nsGetServiceByCIDWithError& gs )
+      MOZ_IMPLICIT nsCOMPtr( const nsGetServiceByCIDWithError& gs )
             : nsCOMPtr_base(0)
           // assign from |do_GetService(cid_expr, &rv)|
         {
@@ -998,7 +1004,7 @@ class nsCOMPtr<nsISupports>
           assign_from_gs_cid_with_error(gs, NS_GET_IID(nsISupports));
         }
 
-      nsCOMPtr( const nsGetServiceByContractID gs )
+      MOZ_IMPLICIT nsCOMPtr( const nsGetServiceByContractID gs )
             : nsCOMPtr_base(0)
           // assign from |do_GetService(contractid_expr)|
         {
@@ -1006,7 +1012,7 @@ class nsCOMPtr<nsISupports>
           assign_from_gs_contractid(gs, NS_GET_IID(nsISupports));
         }
 
-      nsCOMPtr( const nsGetServiceByContractIDWithError& gs )
+      MOZ_IMPLICIT nsCOMPtr( const nsGetServiceByContractIDWithError& gs )
             : nsCOMPtr_base(0)
           // assign from |do_GetService(contractid_expr, &rv)|
         {
@@ -1014,7 +1020,7 @@ class nsCOMPtr<nsISupports>
           assign_from_gs_contractid_with_error(gs, NS_GET_IID(nsISupports));
         }
 
-      nsCOMPtr( const nsCOMPtr_helper& helper )
+      MOZ_IMPLICIT nsCOMPtr( const nsCOMPtr_helper& helper )
             : nsCOMPtr_base(0)
           // ...and finally, anything else we might need to construct from
           //  can exploit the |nsCOMPtr_helper| facility
